WHAT 1. converted the application to use es6 2. added packages 3. added test file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+# Dependency directories
 node_modules/
+
+# Optional npm cache directory
+.npm
+
+# Dist directory
+dist/
+
+# Lock files
 package-lock.json
