--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "pino-wrapper-logger",
+  "name": "n4",
   "version": "1.0.0",
-  "description": "Pino Wrapper Example",
+  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "npm test"
+    "test": "node_modules/.bin/mocha",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "start": "npm run build && node dist/app.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect": "^3.6.6",
-    "express": "^4.16.4",
-    "pino": "^5.10.6",
-    "pino-http": "^4.1.0"
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "rimraf": "^2.6.3"
   }
 }
